(BJH means Bryan Henderson <bryanh@giraffe-data.com>)
(SAB means Steven A. Bone <sbone@pobox.com>)

1.3 - not yet

  * BJH: Break up 'rpctest', rename to 'test'.

  * BJH: Renamed CGI stuff, add non-builtin-registry style of CGI server.

  * BJH: Builds on AIX - new __inline definition, uint32_t instead of uint32,
    et al.

  * BJH: Add xmlrpc_datetime_new_sec(), xmlrpc_read_datetime_sec().

  * BJH: libwww transport does not do the weird handling of the "auth"
    cookie.  It used to have a global cookie (one cookie shared by all
    servers) called "auth", which it maintained in an environment
    variable.

  * BJH: new C++ library designed for pure C++ applications
    (Application never sees the underlying C structures or reference
    counts).  Has value, fault, and registry classes.  No client
    facilities yet.

  * BJH: interface header files renamed from xmlrpc_xxx to xmlrpc-c/xxx
    (old names installed a symbolic links for backward compatibility).

  * BJH: Fix mysterious disablement of forking Abyss (ServerRunForked()).

1.2 - April 4, 2005

  * SAB: Win32 http.sys server: Add new project and sample as 
    an alternative to Abyss on current Win32 platforms.  Does
    basic authentication and SSL.  Requires recent Platform SDK to
    build.
  
  * BJH: Add xmlrpc_int_new(), xmlrpc_read_int(), etc., 
    xmlrpc_decompose_value()

  * BJH: Add nil (<nil/>, XMLRPC_TYPE_NIL) capability.
  
  * SAB: WinInet Transport: Add Ignore Invalid SSL certs option.
  
  * BJH: Add 'network_interface' option to Curl transport.

  * BJH: Add basic authentication to 'xmlrpc' program.

  * SAB: Improve use of libCurl in Win32.  Add documentation
    and alter some project and configuration files.

  * BJH: Add transport-specific options.

  * BJH: Use GNUmakefile to catch non-GNU make

  * BJH: Fix usage message in xmlrpc-c-config.

  * BJH: Curl transport: check for failure of Winsock startup.

  * BJH: Fix memory leak in Curl - not freeing curlTransaction.
