@@ -40,6 +40,8 @@ struct xportparms;
 
 struct xmlrpc_curl_xportparms {
     const char * network_interface;
+    xmlrpc_bool  no_ssl_verifypeer;
+    xmlrpc_bool  no_ssl_verifyhost;
 };
 
 
